paper lacking future work, acknowlegements, bib

--- a/presentation/RFIdentify.tex
+++ b/presentation/RFIdentify.tex
@@ -9,12 +9,11 @@
 
 	
 	\title{RFIDentify: Speaker Presence Sensing}
-	\author{Blake Arnold, Willi Ballenthin
-	{\tt\{baa2121,wrb2102\}@columbia.edu}
-	
-	Internet Real-Time Lab, Columbia University
-	New York, NY 10027
-
+	\author{Blake Arnold, Willi Ballenthin\\
+	\texttt{\{baa2121,wrb2102\}@columbia.edu}\\
+	\\
+	Internet Real-Time Lab, Columbia University\\
+	New York, NY 10027\\
 	}
 
 	
@@ -178,7 +177,7 @@
 
 
         \subsubsection{Implementation}
-        The client is implemented in the C, targetting the Linux platform.  It is compiled in to a single 
+        The client is implemented in the C programming language, targetting the Linux platform.  It is compiled in to a single 
         binary file, to be executed suitable permissions (particularly accessing USB or similar devices).
         After setup, the becomes multi-threaded with two main loops. One loop interfaces with a standard
         Avahi mDNS stack, and updates available server information.  As RFIDentify servers are added or 
