--- a/presentation/RFIdentify.tex
+++ b/presentation/RFIdentify.tex
@@ -243,14 +243,11 @@
 	\end{enumerate}
 		
 
-
-	
-\section{Summary and Future Work}
-Create code for SenseEverything 
-
-	often repeats the main result 
 \section{Acknowledgements}
-\section{Bibliography} 
-	http://www.facebook.com/presence/
+
+We would like to specially acknowledge Professor Henning Schulzrinne at Columbia University for guiding us through the
+project. His inspiration and ideas were critical in the final design and implementation.
+
+We would also like to thank Omer Boyaci for providing insight into the SECE project currently underway at Columbia University.
 
 \end{document}
